customize page titles

--- a/web/src/feature.html
+++ b/web/src/feature.html
@@ -1,11 +1,12 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
+title: Smile - Feature Engineering
 ---
 {% include "toc.njk" %}
 
 <div class="col-md-9 col-md-pull-3">
-    <h1 id="feature-top" class="title">Features</h1>
+    <h1 id="feature-top" class="title">Feature Engineering</h1>
 
     <p>We have gone through the classification and regression algorithms. In the examples,
         we assume that the data is ready and features are carefully prepared, which many
