--- a/web/src/gallery.html
+++ b/web/src/gallery.html
@@ -1,6 +1,7 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
+title: Smile - Gallery
 ---
 <div class="col-md-12">
     <h1 class="gallery-top">Gallery</h1>
