--- a/web/src/index.html
+++ b/web/src/index.html
@@ -1,6 +1,7 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
+title: Smile - Home
 ---
 <div class="col-md-3 col-md-push-9 hidden-xs hidden-sm">
   <div class="news" style="margin-bottom: 20px;">
