--- a/web/src/vegalite.html
+++ b/web/src/vegalite.html
@@ -1,6 +1,7 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
+title: Smile - Declarative Data Visualization
 ---
 {% include "toc.njk" %}
 
