--- a/web/src/association-rule.html
+++ b/web/src/association-rule.html
@@ -1,6 +1,7 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
+title: Smile - Association Rule Mining
 ---
 {% include "toc.njk" %}
 
