--- a/web/src/data.html
+++ b/web/src/data.html
@@ -1,11 +1,12 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
+title: Smile - Data Processing
 ---
 {% include "toc.njk" %}
 
 <div class="col-md-9 col-md-pull-3">
-    <h1 id="data-top" class="title">Data</h1>
+    <h1 id="data-top" class="title">Data Processing</h1>
 
     <p>Machine learning is all about building models from data. However, data scientists
         frequently talk about models and algorithms first, which very likely generates
