--- a/web/src/manifold.html
+++ b/web/src/manifold.html
@@ -1,6 +1,7 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
+title: Smile - Manifold Learning
 ---
 {% include "toc.njk" %}
 
