--- a/web/src/missing-value-imputation.html
+++ b/web/src/missing-value-imputation.html
@@ -1,6 +1,7 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
+title: Smile - Missing Value Imputation
 ---
 {% include "toc.njk" %}
 
