--- a/web/src/vector-quantization.html
+++ b/web/src/vector-quantization.html
@@ -1,6 +1,7 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
+title: Smile - Vector Quantization
 ---
 {% include "toc.njk" %}
 
