revise title to 'Graph Data Structure'

--- a/web/src/graph.html
+++ b/web/src/graph.html
@@ -1,13 +1,13 @@
 ---
 layout: layout.njk
 permalink: "{{ page.filePathStem }}.html"
-title: Smile - Graph
+title: Smile - Graph Data Structure
 ---
 {% include "toc.njk" %}
 
 <div class="col-md-9 col-md-pull-3">
 
-    <h1 id="graph-top" class="title">Graph</h1>
+    <h1 id="graph-top" class="title">Graph Data Structure</h1>
 
     <p>Many machine learning algorithms (e.g. Isomap) employ graph data structures internally.
         Graphs are mathematical structures used to model pairwise relations between
