--- a/web/src/faq.html
+++ b/web/src/faq.html
@@ -24,45 +24,63 @@ title: Smile - FAQ
         Smile artifacts are hosted in <a href="https://oss.sonatype.org/#nexus-search;quick~smile-core">Sonatype Nexus</a>.
         You can add the following dependency into your pom.xml:</p>
 
-    <pre><code>
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#maven_1" data-toggle="tab">Maven</a></li>
+        <li><a href="#gradle_1" data-toggle="tab">Gradle (Kotlin)</a></li>
+        <li><a href="#sbt_1" data-toggle="tab">SBT</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="maven_1">
+            <div class="code" style="text-align: left;">
+                <pre class="prettyprint"><code>
     &lt;dependency&gt;
-      &lt;groupId&gt;com.github.haifengl&lt;/groupId&gt;
-      &lt;artifactId&gt;smile-core&lt;/artifactId&gt;
-      &lt;version&gt;3.1.1&lt;/version&gt;
+        &lt;groupId&gt;com.github.haifengl&lt;/groupId&gt;
+        &lt;artifactId&gt;smile-core&lt;/artifactId&gt;
+        &lt;version&gt;3.1.1&lt;/version&gt;
     &lt;/dependency&gt;
-    </code></pre>
-
-    <p>If you're using Gradle, add the following line into your build
-        file's <code>dependencies</code> section:</p>
-    <pre><code>
+                </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="gradle_1">
+            <div class="code" style="text-align: left;">
+            <pre class="prettyprint"><code>
     implementation("com.github.haifengl:smile-core:3.1.1")
-    </code></pre>
-
-    <p>If you're using SBT, add the following line into your build file:</p>
-    <pre><code>
+            </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="sbt_1">
+            <div class="code" style="text-align: left;">
+            <pre class="prettyprint"><code>
     libraryDependencies += "com.github.haifengl" % "smile-core" % "3.1.1"
-    </code></pre>
+            </code></pre>
+            </div>
+        </div>
+    </div>
 
-    <p>For Scala API,</p>
-    <pre><code>
+    <p>For Scala API, add</p>
+    <div class="code" style="text-align: left;">
+    <pre class="prettyprint"><code>
     libraryDependencies += "com.github.haifengl" %% "smile-scala" % "3.1.1"
     </code></pre>
+    </div>
 
     <p>Some algorithms rely on BLAS and LAPACK (e.g. manifold learning,
         some clustering algorithms, Gaussian Process regression, MLP, etc.).
         To use these algorithms, you should include OpenBLAS for optimized
         matrix computation:</p>
-    <pre><code>
+    <div class="code" style="text-align: left;">
+    <pre class="prettyprint"><code>
     libraryDependencies ++= Seq(
-      "org.bytedeco" % "javacpp"   % "1.5.8"        classifier "macosx-x86_64" classifier "windows-x86_64" classifier "linux-x86_64" classifier "linux-arm64" classifier "linux-ppc64le" classifier "android-arm64" classifier "ios-arm64",
-      "org.bytedeco" % "openblas"  % "0.3.21-1.5.8" classifier "macosx-x86_64" classifier "windows-x86_64" classifier "linux-x86_64" classifier "linux-arm64" classifier "linux-ppc64le" classifier "android-arm64" classifier "ios-arm64",
-      "org.bytedeco" % "arpack-ng" % "3.8.0-1.5.8"  classifier "macosx-x86_64" classifier "windows-x86_64" classifier "linux-x86_64" classifier "linux-arm64" classifier "linux-ppc64le" classifier ""
+      "org.bytedeco" % "javacpp"   % "1.5.8"        classifier "macosx-x86_64" classifier "windows-x86_64" classifier "linux-x86_64",
+      "org.bytedeco" % "openblas"  % "0.3.21-1.5.8" classifier "macosx-x86_64" classifier "windows-x86_64" classifier "linux-x86_64",
+      "org.bytedeco" % "arpack-ng" % "3.8.0-1.5.8"  classifier "macosx-x86_64" classifier "windows-x86_64" classifier "linux-x86_64" classifier ""
     )
     </code></pre>
+    </div>
 
-    <p>In this example, we include all supported 64-bit platforms and filter
-        out 32-bit platforms. The user should include only the needed platforms
-        to save spaces.</p>
+    <p>For mobile platform, you may need add <code>classifier "android-arm64"</code>
+        or <code>classifier "ios-arm64"</code>. In general, you should include only
+        the needed platforms to save spaces.</p>
 
     <p>If you prefer other BLAS implementations, you can use any library found
         on the "java.library.path" or on the class path, by specifying it with
@@ -85,15 +103,37 @@ title: Smile - FAQ
 
     <h2 class="question" id="model-serialization">Model serialization</h2>
     <p class="answer">To serialize a model, you may use</p>
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#java_3" data-toggle="tab">Java</a></li>
+        <li><a href="#scala_3" data-toggle="tab">Scala</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane" id="scala_3">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
+    import smile._
     write(model, file)
     </code></pre>
-    <p>This method is in the Scala API <code>smile.write</code> object and serialize the model to Java
-    serialization format. This is handy if you want to use a model in Spark.</p>
+            </div>
+        </div>
+        <div class="tab-pane active" id="java_3">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    import smile.io.Write;
+    Write.object(model, file)
+        </code></pre>
+            </div>
+        </div>
+    </div>
+
+    <p>This method serializes the model in Java serialization format. This is handy
+        if you want to use a model in Spark.</p>
 
     <h2 class="question" id="data-format">Data Format</h2>
     <p class="answer">
-        Most Smile algorithms take simple <code>double[]</code> as input. So you can use your favorite methods
+        Most Smile algorithms take simple <code>double[]</code> or <code>DataFrame</code>as input.
+        <code>DataFrame</code> can be easily constructed from <code>double[][]</code> too.
+        So you can use your favorite methods
         or library to import the data as long as the samples are in double arrays. Meanwhile, Smile provides
         a couple of parsers in <code>smile.io</code> for popular data formats, such as CSV, Weka's ARFF files,
         LibSVM's file format, delimited text files, SAS, Parquet, Avro, Arrow, JSON, and binary sparse data.
@@ -111,18 +151,18 @@ title: Smile - FAQ
     </p>
 
     <ul class="nav nav-tabs">
-        <li class="active"><a href="#scala_1" data-toggle="tab">Scala</a></li>
-        <li><a href="#java_1" data-toggle="tab">Java</a></li>
+        <li class="active"><a href="#java_1" data-toggle="tab">Java</a></li>
+        <li><a href="#scala_1" data-toggle="tab">Scala</a></li>
     </ul>
     <div class="tab-content">
-        <div class="tab-pane active" id="scala_1">
+        <div class="tab-pane" id="scala_1">
             <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-sh"><code>
     bin/smile -Djava.awt.headless=true
     </code></pre>
             </div>
         </div>
-        <div class="tab-pane" id="java_1">
+        <div class="tab-pane active" id="java_1">
             <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-sh"><code>
     bin/jshell.sh -R-Djava.awt.headless=true
@@ -134,21 +174,21 @@ title: Smile - FAQ
     <p>The following example shows how to save a plot in the headless mode.</p>
 
     <ul class="nav nav-tabs">
-        <li class="active"><a href="#scala_2" data-toggle="tab">Scala</a></li>
-        <li><a href="#java_2" data-toggle="tab">Java</a></li>
+        <li class="active"><a href="#java_2" data-toggle="tab">Java</a></li>
+        <li><a href="#scala_2" data-toggle="tab">Scala</a></li>
     </ul>
     <div class="tab-content">
-        <div class="tab-pane active" id="scala_2">
+        <div class="tab-pane" id="scala_2">
             <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
-    val toy = read.csv("data/classification/toy/toy-train.txt", delimiter='\t', header=false)
+    val toy = read.csv("data/classification/toy200.txt", delimiter="\t", header=false)
     val canvas = plot(toy, "V2", "V3", "V1", '.')
     val image = canvas.toBufferedImage(400, 400)
     javax.imageio.ImageIO.write(image, "png", new java.io.File("headless.png"))
     </code></pre>
             </div>
         </div>
-        <div class="tab-pane" id="java_2">
+        <div class="tab-pane active" id="java_2">
             <div class="code" style="text-align: left;">
           <pre class="prettyprint lang-java"><code>
     import java.awt.Color;
@@ -156,7 +196,7 @@ title: Smile - FAQ
     import smile.plot.swing.*;
     import org.apache.commons.csv.CSVFormat;
 
-    var toy = Read.csv("data/classification/toy/toy-train.txt", CSVFormat.DEFAULT.withDelimiter('\t'));
+    var toy = Read.csv("data/classification/toy200.txt", CSVFormat.DEFAULT.withDelimiter('\t'));
     var canvas = ScatterPlot.of(toy, "V2", "V3", "V1", '.').canvas();
     var image = canvas.toBufferedImage(400, 400);
     javax.imageio.ImageIO.write(image, "png", new java.io.File("headless.png"));
