update nav link title

--- a/web/src/overview.html
+++ b/web/src/overview.html
@@ -321,7 +321,7 @@ title: Smile - Overview
     <div id="btnv">
         <span class="btn-arrow-left">&larr; &nbsp;</span>
         <a class="btn-prev-text" href="quickstart.html" title="Previous Section: Quick Start"><span>Quick Start</span></a>
-        <a class="btn-next-text" href="data.html" title="Next Section: Data"><span>Data</span></a>
+        <a class="btn-next-text" href="data.html" title="Next Section: Data"><span>Data Processing</span></a>
         <span class="btn-arrow-right">&nbsp;&rarr;</span>
     </div>
 
