--- a/web/src/regression.html
+++ b/web/src/regression.html
@@ -1427,7 +1427,7 @@ title: Smile - Regression
     <div id="btnv">
         <span class="btn-arrow-left">&larr; &nbsp;</span>
         <a class="btn-prev-text" href="classification.html" title="Previous Section: Classification"><span>Classification</span></a>
-        <a class="btn-next-text" href="feature.html" title="Next Section: Features"><span>Features</span></a>
+        <a class="btn-next-text" href="feature.html" title="Next Section: Feature Engineering"><span>Features</span></a>
         <span class="btn-arrow-right">&nbsp;&rarr;</span>
     </div>
 </div>
