--- a/web/src/validation.html
+++ b/web/src/validation.html
@@ -905,7 +905,7 @@ title: Smile - Model Validation
 
     <div id="btnv">
         <span class="btn-arrow-left">&larr; &nbsp;</span>
-        <a class="btn-prev-text" href="feature.html" title="Previous Section: Features"><span>Features</span></a>
+        <a class="btn-prev-text" href="feature.html" title="Previous Section: Feature Engineering"><span>Features</span></a>
         <a class="btn-next-text" href="missing-value-imputation.html" title="Next Section: Missing Value Imputation"><span>Missing Value Imputation</span></a>
         <span class="btn-arrow-right">&nbsp;&rarr;</span>
     </div>
