--- a/web/src/visualization.html
+++ b/web/src/visualization.html
@@ -1038,7 +1038,7 @@ title: Smile - Data Visualization
 
     <div id="btnv">
         <span class="btn-arrow-left">&larr; &nbsp;</span>
-        <a class="btn-prev-text" href="data.html" title="Previous Section: Data"><span>Data</span></a>
+        <a class="btn-prev-text" href="data.html" title="Previous Section: Data"><span>Data Processing</span></a>
         <a class="btn-next-text" href="vegalite.html" title="Next Section: Declarative Visualization"><span>Declarative Visualization</span></a>
         <span class="btn-arrow-right">&nbsp;&rarr;</span>
     </div>
